Format: Aplicado Prettier globalmente
