# chapter-three/src/modules/cars/entities/Category.ts
@@ -2,25 +2,25 @@ import { v4 as uuidv4 } from 'uuid'
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm'
 // Faz parte da estrutura do projeto, agindo como uma interface: Define o que é uma Category
 
-@Entity("categories")
+@Entity('categories')
 class Category {
-  @PrimaryColumn()
-  id?: string
+	@PrimaryColumn()
+	id?: string
 
-  @Column()
-  name: string
+	@Column()
+	name: string
 
-  @Column()
-  description: string
+	@Column()
+	description: string
 
-  @CreateDateColumn()
-  created_at: Date
+	@CreateDateColumn()
+	created_at: Date
 
-  constructor() {
-    if (!this.id) {
-      this.id = uuidv4()
-    }
-  }
+	constructor() {
+		if (!this.id) {
+			this.id = uuidv4()
+		}
+	}
 }
 
 export { Category }
