# chapter-three/src/modules/cars/entities/Specification.ts
@@ -2,26 +2,25 @@ import { v4 as uuidv4 } from 'uuid'
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm'
 
 // Faz parte da estrutura do projeto, agindo como uma interface: Define o que é uma Specification
-@Entity("specifications")
+@Entity('specifications')
 class Specification {
+	@PrimaryColumn()
+	id?: string
 
-  @PrimaryColumn()
-  id?: string
+	@Column()
+	name: string
 
-  @Column()
-  name: string
+	@Column()
+	description: string
 
-  @Column()
-  description: string
-  
-  @CreateDateColumn()
-  created_at: Date
+	@CreateDateColumn()
+	created_at: Date
 
-  constructor() {
-    if (!this.id) {
-      this.id = uuidv4()
-    }
-  }
+	constructor() {
+		if (!this.id) {
+			this.id = uuidv4()
+		}
+	}
 }
 
 export { Specification }
